[tool.poetry]
name = "luantber-github-io"
version = "0.1.0"
description = ""
authors = ["Luis Bernal <luantber@gmail.com>"]
readme = "README.md"
packages = [{include = "luantber"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
